Fixing the arts page on mobile

--- a/app/styles/pages/_art.scss
+++ b/app/styles/pages/_art.scss
@@ -254,6 +254,15 @@ ul.tools li.views {
   .next-des {
     margin-top: 30px;
   }
+  .ds-shot-img {
+    padding: 12px;
+  }
+  div.ds-shot-rand-shot {
+    max-width: 140px;
+  }
+  .ds-shot-rand-shot-img img {
+    height: auto;
+  }
 }
 
 
